--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>I Am Bhavisha</h1>
             <h2>WHAT I EXPERTISE IN ?</h2>
             <h3 id="icon"></h3>
-            <a href="activity.html" class="btn-light">View My Work</a>
+            <a href="Activity.html" class="btn-light">View My Work</a>
             
         </div>
     </header>
