--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header-home">
         <div class="header-content">
             <div class="header">
-                <img src="CB.png">
+                <img src="Cb.png">
             </div>
             
         <div class="list">
