--- a/Activity.html
+++ b/Activity.html
@@ -12,7 +12,7 @@
         <header class="header-home">
         <div class="header-content">
             <div class="header">
-              <img src="Cb.png" alt="align box" align="left">
+              <img src="CB.png" alt="align box" align="left">
             </div>
         <div class="list">
             <li>
